--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Project Name",
+  "name": "MHI_Academy",
   "version": "0.0.1",
   "description": "A review time project",
   "main": "index.js",
